@@ -1,0 +1,9 @@
+package hoff
+
+// ComputationMode define the mode of computation for the engine.
+type ComputationMode string
+
+const (
+	// SequentialComputation will run sequential computations in the engine.
+	SequentialComputation ComputationMode = "seq"
+)
